<resources>
    <string name="app_name">CBA</string>
    <string name="title_name">Can Book Anything</string>
    <string name="save">Register for services</string>
    <string name="retrieve">Search for service providers</string>
    <string name="cook">Cook</string>
    <string name="maid">Maid</string>
    <string name="cp">Carpenter</string>
    <string name="gd">Gardener</string>
    <string name="el">Electrician</string>
    <string name="mec">Mechanic</string>
    <string name="name_ser">Enter the Name</string>
    <string name="ph">Enter the Phone Number</string>
    <string name="ad">Enter the Address</string>
    <string name="service_area">Enter the Serviceable Area</string>
    <string name="save_data">Save</string>
    <string name="call">Call Button</string>
    <string name="user_agree_title">User Agreement</string>
    <string name="tut">Tutor</string>
    <string name="gro">Grocery</string>
    <string-array name="planets_array">
        <item>Bokaro</item>
        <item>Dhanbad</item>
        <item>Ranchi</item>
        <item>Dumka</item>
    </string-array>
</resources>